some flexbox code in index

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <li><a href="#">Detail </a></li>
             <li><a href="#">Contact us </a></li>
         </ul>
-<!-- 
+
     <div id="outer">
-        <div id="inner"> -->
+        <div id="inner">
 
         </div>
     </div>
